--- a/orca_base/CMakeLists.txt
+++ b/orca_base/CMakeLists.txt
@@ -27,6 +27,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(ukf REQUIRED)
+find_package(urdf REQUIRED)
 find_package(visualization_msgs REQUIRED)
 
 # Package includes not needed for CMake >= 2.8.11
@@ -68,17 +69,20 @@ add_executable(
   filter_node
   src/filter_node.cpp
   src/filter.cpp
+  src/util.cpp
 )
 
 ament_target_dependencies(
   filter_node
   orca_msgs
+  geometry_msgs
   nav_msgs
   rclcpp
   ros2_shared
   tf2
   tf2_ros
   ukf
+  urdf
 )
 
 #=============
