Multi-sensor tests, checkpoint

--- a/orca_gazebo/worlds/vlam_test_map.yaml
+++ b/orca_gazebo/worlds/vlam_test_map.yaml
@@ -7,3 +7,8 @@ markers:
     f: 1
     xyz: [0.0, 0.0, 0.0]
     rpy: [1.5707963267948966, 2.2204460492503126e-16, -1.5707963267948966]
+  - id: 1
+    u: 1
+    f: 1
+    xyz: [-0.2, 0, -2]
+    rpy: [0.0, -0.0, -1.5707963267948968]
