--- a/orca_msgs/CMakeLists.txt
+++ b/orca_msgs/CMakeLists.txt
@@ -32,6 +32,7 @@ find_package(std_msgs REQUIRED)
 # Generate ROS messages
 rosidl_generate_interfaces(
   orca_msgs
+  action/Mission.action
   msg/Barometer.msg
   msg/Battery.msg
   msg/Control.msg
