Build will generate the URDF file from the XACRO file

--- a/orca_gazebo/CMakeLists.txt
+++ b/orca_gazebo/CMakeLists.txt
@@ -108,7 +108,7 @@ install(
 
 ## Install various directories
 install(
-  DIRECTORY launch models worlds
+  DIRECTORY launch models worlds sdf
   DESTINATION share/${PROJECT_NAME}
 )
 
