--- a/orca_description/package.xml
+++ b/orca_description/package.xml
@@ -15,6 +15,7 @@
     <author>Clyde McQueen</author>
 
     <buildtool_depend>ament_cmake</buildtool_depend>
+    <buildtool_depend>xacro</buildtool_depend>
 
     <export>
         <build_type>ament_cmake</build_type>
