--- a/orca_filter/package.xml
+++ b/orca_filter/package.xml
@@ -2,9 +2,9 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
 
-    <name>orca_base</name>
+    <name>orca_filter</name>
     <version>0.2.0</version>
-    <description>Orca controller</description>
+    <description>Orca filter</description>
 
     <maintainer email="clyde@mcqueen.net">Clyde McQueen</maintainer>
     <license>BSD</license>
@@ -16,6 +16,7 @@
 
     <buildtool_depend>ament_cmake</buildtool_depend>
 
+    <depend>Eigen3</depend>
     <depend>fiducial_vlam_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>nav_msgs</depend>
