--- a/orca_driver/package.xml
+++ b/orca_driver/package.xml
@@ -16,6 +16,7 @@
 
     <buildtool_depend>ament_cmake</buildtool_depend>
 
+    <depend>br_ms5837</depend>
     <depend>orca_msgs</depend>
     <depend>rclcpp</depend>
     <depend>rclpy</depend>
