--- a/orca_driver/scripts/rcam.service
+++ b/orca_driver/scripts/rcam.service
@@ -3,8 +3,8 @@ Description=Orca right camera
 
 [Service]
 Type=forking
-User=clyde
-ExecStart=/home/clyde/ros2/orca_ws/install/orca_driver/lib/orca_driver/start_rcam.sh
+User=pi
+ExecStart=/home/pi/orca2/orca_driver/scripts/start_rcam.sh
 
 [Install]
 WantedBy=multi-user.target
