--- a/orca_gazebo/package.xml
+++ b/orca_gazebo/package.xml
@@ -17,6 +17,7 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
 
     <depend>gazebo</depend>
+    <depend>gazebo_dev</depend>
     <depend>gazebo_ros</depend>
     <depend>geometry_msgs</depend>
     <depend>orca_msgs</depend>
