--- a/orca_shared/CMakeLists.txt
+++ b/orca_shared/CMakeLists.txt
@@ -17,11 +17,13 @@ endif ()
 
 # Emulate colcon by providing paths to other projects in the workspace
 if ($ENV{CLION_IDE})
+  set(fiducial_vlam_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/fiducial_vlam_msgs/share/fiducial_vlam_msgs/cmake")
   set(orca_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_msgs/share/orca_msgs/cmake")
 endif ()
 
 # Find packages
 find_package(ament_cmake REQUIRED)
+find_package(fiducial_vlam_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(orca_msgs REQUIRED)
 find_package(rclcpp)
@@ -47,6 +49,7 @@ add_library(
 
 ament_target_dependencies(
   ${ORCA_SHARED_LIB}
+  fiducial_vlam_msgs
   geometry_msgs
   orca_msgs
   rclcpp
