Use geometry_msgs/Pose, not orca_msgs/Pose

--- a/orca_msgs/package.xml
+++ b/orca_msgs/package.xml
@@ -22,6 +22,7 @@
 
     <member_of_group>rosidl_interface_packages</member_of_group>
 
+    <depend>geometry_msgs</depend>
     <depend>std_msgs</depend>
 
     <export>
