--- a/orca_msgs/CMakeLists.txt
+++ b/orca_msgs/CMakeLists.txt
@@ -26,6 +26,7 @@ endif ()
 
 # Find packages
 find_package(ament_cmake REQUIRED)
+find_package(geometry_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED)
 
@@ -40,9 +41,7 @@ rosidl_generate_interfaces(
   msg/Efforts.msg
   msg/Leak.msg
   msg/Proc.msg
-  msg/Pose.msg
-  msg/PoseStamped.msg
-  DEPENDENCIES std_msgs
+  DEPENDENCIES geometry_msgs std_msgs
 )
 
 ament_export_dependencies(rosidl_default_runtime)
