--- a/orca_description/CMakeLists.txt
+++ b/orca_description/CMakeLists.txt
@@ -1,7 +1,20 @@
 cmake_minimum_required(VERSION 3.5)
 project(orca_description)
 
+# Default to C99
+if (NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif ()
+
+# Default to C++14
+if (NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif ()
+
+# Find packages
 find_package(ament_cmake REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(urdf REQUIRED)
 find_package(xacro REQUIRED)
 
 #=============
@@ -29,6 +42,28 @@ add_custom_command(
 add_custom_target(generate_urdf ALL DEPENDS ${URDF_FILE})
 
 #=============
+# Library
+#=============
+
+# Local includes
+include_directories(
+  include
+)
+
+set(ORCA_DESCRIPTION_LIB "orca_description")
+
+add_library(
+  ${ORCA_DESCRIPTION_LIB} SHARED
+  src/parser.cpp
+)
+
+ament_target_dependencies(
+  ${ORCA_DESCRIPTION_LIB}
+  tf2
+  urdf
+)
+
+#=============
 # Install
 #=============
 
@@ -37,5 +72,21 @@ install(
   DESTINATION share/${PROJECT_NAME}
 )
 
+# Export include directory
+ament_export_include_directories(include)
+
+# Install include directory
+install(DIRECTORY include/${PROJECT_NAME} DESTINATION include)
+
+# Export library
+ament_export_libraries(${ORCA_DESCRIPTION_LIB})
+
+# Install library
+install(
+  TARGETS ${ORCA_DESCRIPTION_LIB}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION bin
+)
 
 ament_package()
