--- a/orca_description/package.xml
+++ b/orca_description/package.xml
@@ -17,6 +17,9 @@
     <buildtool_depend>ament_cmake</buildtool_depend>
     <buildtool_depend>xacro</buildtool_depend>
 
+    <depend>tf2</depend>
+    <depend>urdf</depend>
+
     <export>
         <build_type>ament_cmake</build_type>
     </export>
