Split fp.* out from orca_shared, optimized imports, use trap velo for observation segments, etc.

--- a/orca_base/CMakeLists.txt
+++ b/orca_base/CMakeLists.txt
@@ -49,6 +49,7 @@ add_executable(
   base_node
   src/astar.cpp
   src/base_node.cpp
+  src/fp.cpp
   src/map.cpp
   src/mission.cpp
   src/planner.cpp
