Add depth_node and move baro init there, re-think how auv_advance loop works, etc.

--- a/orca_base/CMakeLists.txt
+++ b/orca_base/CMakeLists.txt
@@ -126,6 +126,7 @@ install(
   PROGRAMS
   scripts/experiments.py
   scripts/nees.py
+  scripts/plot_auv_segments.py
   scripts/plot_control.py
   scripts/plot_filter.py
   scripts/plot_odom.py
