Re-add support for filtered odometry

--- a/orca_gazebo/launch/auv_node_params.yaml
+++ b/orca_gazebo/launch/auv_node_params.yaml
@@ -1,5 +1,8 @@
 /auv_node:
   ros__parameters:
-    publish_tf: true
+    loop_driver: 0
+    filtered_odom: true
+    fuse_depth: false
+    publish_tf: false
     param_fluid_density: 997.0
     planner_max_short_plan_xy: 0.5
