Move FP from orca_base to orca_shared so that orca_filter can use it

--- a/orca_shared/CMakeLists.txt
+++ b/orca_shared/CMakeLists.txt
@@ -44,6 +44,7 @@ set(ORCA_SHARED_LIB "orca_shared")
 add_library(
   ${ORCA_SHARED_LIB} SHARED
   src/baro.cpp
+  src/fp.cpp
   src/geometry.cpp
   src/model.cpp
   src/pwm.cpp
