--- a/orca_gazebo/package.xml
+++ b/orca_gazebo/package.xml
@@ -20,6 +20,7 @@
     <depend>gazebo_dev</depend>
     <depend>gazebo_ros</depend>
     <depend>geometry_msgs</depend>
+    <depend>orca_description</depend>
     <depend>orca_msgs</depend>
     <depend>orca_shared</depend>
     <depend>rclcpp</depend>
