Prep for ft3 testing

--- a/orca_driver/CMakeLists.txt
+++ b/orca_driver/CMakeLists.txt
@@ -14,29 +14,17 @@ endif ()
 if ($ENV{CLION_IDE})
   message("Running inside CLion")
   set(br_ms5837_DIR "${PROJECT_SOURCE_DIR}/../../../install/br_ms5837/share/br_ms5837/cmake")
-  set(fiducial_vlam_DIR "${PROJECT_SOURCE_DIR}/../../../install/fiducial_vlam/share/fiducial_vlam/cmake")
-  set(gscam_DIR "${PROJECT_SOURCE_DIR}/../../../install/gscam/share/gscam/cmake")
   set(orca_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_msgs/share/orca_msgs/cmake")
   set(ros2_shared_DIR "${PROJECT_SOURCE_DIR}/../../../install/ros2_shared/share/ros2_shared/cmake")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRUN_INSIDE_CLION")
 endif ()
 
-# If we're running fiducial_vlam_sam instead of fiducial_vlam, set this to TRUE
-# This shouldn't be required... a bug in the GTSAM CMakeLists.txt?
-set(RUN_GTSAM FALSE)
-
 find_package(ament_cmake REQUIRED)
 find_package(br_ms5837 REQUIRED)
-find_package(fiducial_vlam REQUIRED)
-find_package(gscam REQUIRED)
-if (RUN_GTSAM)
-  find_package(GTSAM REQUIRED)
-endif ()
 find_package(orca_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(ros2_shared REQUIRED)
-find_package(sensor_msgs REQUIRED)
 
 set(mraa_INCLUDE_DIRS "/usr/include")
 set(mraa_LIBRARIES "/usr/lib/x86_64-linux-gnu/libmraa.so")
@@ -80,42 +68,21 @@ ament_target_dependencies(
 )
 
 #=============
-# Composite gscam and fiducial_vlam main
-#=============
-
-add_executable(
-  gscam_vloc_main
-  src/gscam_vloc_main.cpp
-)
-ament_target_dependencies(
-  gscam_vloc_main
-  fiducial_vlam
-  gscam
-  rclcpp
-)
-
-# Best practice, see https://discourse.ros.org/t/ament-best-practice-for-sharing-libraries/3602
-target_link_libraries(gscam_vloc_main gscam::gscam_node fiducial_vlam::vloc_node)
-
-if (RUN_GTSAM)
-  target_link_libraries(gscam_vloc_main gtsam)
-endif ()
-
-#=============
 # Install
 #=============
 
 # Install C++ targets
 install(
-  TARGETS driver_node test_node gscam_vloc_main
+  TARGETS driver_node test_node
   LIBRARY DESTINATION lib                 # Shared libraries must be in lib
   RUNTIME DESTINATION lib/${PROJECT_NAME} # Node executables must be in lib/<pkg> for ros2
 )
 
-# Install Python nodes
+# Install scripts
 install(
   PROGRAMS  # PROGRAMS sets execute bits, FILES clears them
   scripts/start_driver.sh
+  scripts/start_fcam.sh
   DESTINATION lib/${PROJECT_NAME}
 )
 
