Add orca::Observer class, not integrated

--- a/orca_base/CMakeLists.txt
+++ b/orca_base/CMakeLists.txt
@@ -132,6 +132,7 @@ add_executable(
 ament_target_dependencies(
   test_main
   fiducial_vlam_msgs
+  image_geometry
   orca_msgs
   orca_shared
   rclcpp
