--- a/orca_shared/package.xml
+++ b/orca_shared/package.xml
@@ -18,6 +18,7 @@
 
     <depend>fiducial_vlam_msgs</depend>
     <depend>geometry_msgs</depend>
+    <depend>image_geometry</depend>
     <depend>orca_msgs</depend>
     <depend>rclcpp</depend>
     <depend>tf2</depend>
