Integrate w/ astar package

--- a/orca_shared/package.xml
+++ b/orca_shared/package.xml
@@ -16,6 +16,7 @@
 
     <buildtool_depend>ament_cmake</buildtool_depend>
 
+    <depend>astar</depend>
     <depend>fiducial_vlam_msgs</depend>
     <depend>geometry_msgs</depend>
     <depend>image_geometry</depend>
