--- a/orca_shared/CMakeLists.txt
+++ b/orca_shared/CMakeLists.txt
@@ -17,12 +17,14 @@ endif ()
 
 # Emulate colcon by providing paths to other projects in the workspace
 if ($ENV{CLION_IDE})
+  set(astar_DIR "${PROJECT_SOURCE_DIR}/../../../install/astar/share/astar/cmake")
   set(fiducial_vlam_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/fiducial_vlam_msgs/share/fiducial_vlam_msgs/cmake")
   set(orca_msgs_DIR "${PROJECT_SOURCE_DIR}/../../../install/orca_msgs/share/orca_msgs/cmake")
 endif ()
 
 # Find packages
 find_package(ament_cmake REQUIRED)
+find_package(astar REQUIRED)
 find_package(fiducial_vlam_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(image_geometry REQUIRED)
@@ -56,6 +58,7 @@ add_library(
 
 ament_target_dependencies(
   ${ORCA_SHARED_LIB}
+  astar
   fiducial_vlam_msgs
   geometry_msgs
   image_geometry
@@ -100,6 +103,7 @@ add_executable(
 
 ament_target_dependencies(
   test_main
+  astar
   fiducial_vlam_msgs
   image_geometry
   orca_msgs
