--- a/orca_filter/package.xml
+++ b/orca_filter/package.xml
@@ -19,6 +19,7 @@
     <depend>Eigen3</depend>
     <depend>fiducial_vlam_msgs</depend>
     <depend>geometry_msgs</depend>
+    <depend>image_geometry</depend>
     <depend>nav_msgs</depend>
     <depend>orca_description</depend>
     <depend>orca_msgs</depend>
