--- a/orca_driver/CMakeLists.txt
+++ b/orca_driver/CMakeLists.txt
@@ -26,9 +26,20 @@ find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(ros2_shared REQUIRED)
 
+# Hack for MRAA
 set(mraa_INCLUDE_DIRS "/usr/include")
-set(mraa_LIBRARIES "/usr/lib/x86_64-linux-gnu/libmraa.so")
 set(mraa_FOUND true)
+
+# x86 vs ARM -- this works on Linux
+if (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "aarch64")
+  message(STATUS "Detected aarch64")
+  set(mraa_LIBRARIES "/usr/lib/aarch64-linux-gnu/libmraa.so")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPROCESSOR_AARCH64")
+else()
+  message(STATUS "Default to x86_64")
+  set(mraa_LIBRARIES "/usr/lib/x86_64-linux-gnu/libmraa.so")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DPROCESSOR_X86_64")
+endif()
 
 # Package includes not needed for CMake >= 2.8.11
 include_directories(
