--- a/orca_driver/scripts/orca_driver.service
+++ b/orca_driver/scripts/orca_driver.service
@@ -3,12 +3,12 @@ Description=Orca ROS driver
 
 [Service]
 Type=forking
-User=clyde
+User=ubuntu
 SupplementaryGroups=dialout
 SupplementaryGroups=leds
 SupplementaryGroups=i2c
 SupplementaryGroups=gpio
-ExecStart=/home/clyde/ros2/orca_ws/install/orca_driver/lib/orca_driver/start_driver.sh
+ExecStart=/home/ubuntu/ros2/orca_ws/install/orca_driver/lib/orca_driver/start_driver.sh
 
 [Install]
 WantedBy=multi-user.target
