--- a/orca_driver/scripts/orca_fcam.service
+++ b/orca_driver/scripts/orca_fcam.service
@@ -3,8 +3,8 @@ Description=Orca forward camera
 
 [Service]
 Type=forking
-User=clyde
-ExecStart=/home/clyde/ros2/orca_ws/install/orca_driver/lib/orca_driver/start_fcam.sh
+User=ubuntu
+ExecStart=/home/ubuntu/ros2/orca_ws/install/orca_driver/lib/orca_driver/start_fcam.sh
 
 [Install]
 WantedBy=multi-user.target
